# chess_engine

./: CMakeLists.txt
gui/: mainwindow.cpp  mainwindow.ui
src/: bitboards.c  def.h  init.c
src/Figures/: bishop.cpp  bishop.h  ifigure.cpp  ifigure.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  queen.cpp  queen.h  rook.cpp  rook.h
